backend/compile_log.txt
> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED
C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\AuthIntegrationTest.java:7: error: package org.springframework.boot.test.autoconfigure.web.servlet does not exist
import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
                                                              ^
C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\AuthIntegrationTest.java:19: error: cannot find symbol
@AutoConfigureMockMvc
 ^
  symbol: class AutoConfigureMockMvc
C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\EquipmentControllerTest.java:11: error: package org.springframework.boot.test.autoconfigure.web.servlet does not exist
import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
                                                              ^
C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\EquipmentControllerTest.java:27: error: cannot find symbol
@WebMvcTest(EquipmentController.class)
 ^
  symbol: class WebMvcTest
4 errors

[Incubating] Problems report is available at: file:///C:/Users/enri3/OneDrive/Desktop/Projectos/Cyrcetech/backend/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\AuthIntegrationTest.java:19: error: cannot find symbol
  @AutoConfigureMockMvc
   ^
    symbol: class AutoConfigureMockMvc
  C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\EquipmentControllerTest.java:27: error: cannot find symbol
  @WebMvcTest(EquipmentController.class)
   ^
    symbol: class WebMvcTest
  C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\AuthIntegrationTest.java:7: error: package org.springframework.boot.test.autoconfigure.web.servlet does not exist
  import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
                                                                ^
  C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\EquipmentControllerTest.java:11: error: package org.springframework.boot.test.autoconfigure.web.servlet does not exist
  import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
                                                                ^
3 actionable tasks: 1 executed, 2 up-to-date
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 5s
